[gd_scene load_steps=15 format=3 uid="uid://bbyt5atvbxtlm"]

[ext_resource type="Script" uid="uid://braugxis6d8f4" path="res://Props/Rocks/rock.gd" id="1_1biey"]
[ext_resource type="Texture2D" uid="uid://b7ppwmnywswjo" path="res://Props/Rocks/RockFormation_Grayscale-Sheet-export.png" id="2_1biey"]
[ext_resource type="PackedScene" uid="uid://b0qj7uk087no6" path="res://GeneralNodes/HitBox/hit_box.tscn" id="3_tuwr1"]
[ext_resource type="PackedScene" uid="uid://crnk5hqebaqnu" path="res://GeneralNodes/PersistentDataHelper/persistent_data_handler.tscn" id="4_5lps4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5har1"]
size = Vector2(22, 19)

[sub_resource type="CircleShape2D" id="CircleShape2D_1biey"]
radius = 16.0

[sub_resource type="Animation" id="Animation_gnsy7"]
resource_name = "hurt_anim"

[sub_resource type="Animation" id="Animation_tuwr1"]
resource_name = "rock_hp5"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5lps4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_t15le"]
resource_name = "rock_hp4"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_a2rg3"]
resource_name = "rock_hp3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.13333334),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_d8hax"]
resource_name = "rock_hp2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_3sctf"]
resource_name = "rock_hp1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bdkac"]
_data = {
&"RESET": SubResource("Animation_5lps4"),
&"hurt_anim": SubResource("Animation_gnsy7"),
&"rock_hp1": SubResource("Animation_3sctf"),
&"rock_hp2": SubResource("Animation_d8hax"),
&"rock_hp3": SubResource("Animation_a2rg3"),
&"rock_hp4": SubResource("Animation_t15le"),
&"rock_hp5": SubResource("Animation_tuwr1")
}

[node name="rock" type="Node2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_1biey")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(0, -7)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 2
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_5har1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -7)
texture = ExtResource("2_1biey")
hframes = 5

[node name="hit_box" parent="." instance=ExtResource("3_tuwr1")]
position = Vector2(0, -7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_1biey")
debug_color = Color(0.92941177, 0, 0.654902, 0.3372549)

[node name="isDestroyed" parent="." instance=ExtResource("4_5lps4")]

[node name="crack_anim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_bdkac")
}
